# DayScope

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets-example.toml  .secrets.toml  README.md  app.py  config.py  docker-compose.yaml  pyproject.toml  pytest.ini  redis.conf  settings.toml
I18N/: __init__.py  factory.py
alembic/: env.py
alembic/versions/: 2025_06_18_1300-1f417b9f4a3e_first_migration.py  2025_07_16_1415-2ab6212da7fe_.py  2025_07_16_1426-474ae2751628_.py  2025_08_03_2255-c973491dba64_.py  2025_08_04_1335-eaf675f956fb_add_unique_to_user_and_date_in_days_.py  2025_08_04_1503-7d4ce024b3ff_add_unique_to_task_and_day_in_task_.py  2025_09_04_1510-20ba064a3090_.py
bot/: __init__.py  __main__.py  config.py  i18n_factory.py  utils.py
bot/custom_widgets/: __init__.py  i18n_text.py
bot/db/: requests.py
bot/db/models/: __init__.py  days.py  notes.py  tasks.py  users.py
bot/db/requests/: __init__.py  days.py  notes.py  tasks.py  users.py
bot/dialogs/: __init__.py  states.py
bot/dialogs/notes/: __init__.py  dialog.py  getters.py  (+1 more)
bot/handling/: states.py
bot/middlewares/: db_session.py  i18n.py
database/: __init__.py  config.py  requests.py
database/migrations/: env.py
database/models/: __init__.py  days.py  notes.py  tasks.py  users.py
database/requests/: __init__.py  requests.py
logs/: __init__.py  config.py  startup.py
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
redis_data/: redis_dump.rdb
tests/: conftest.py  mocked_aiogram.py  test_handlers.py  utils.py
(+95 files in other folders)
