[project]
name = "dayscope"
version = "0.1.0"
description = ""
authors = [{ name = "DEVOURING", email = "DevouringOG@yandex.ru" }]
requires-python = "3.11.5"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "aiogram-dialog (>=2.3.1,<3.0.0)",
    "fluentogram (>=1.1.10,<2.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
