[project]
name = "dayscope"
version = "0.1.0"
description = ""
authors = [{ name = "DEVOURING", email = "DevouringOG@yandex.ru" }]
requires-python = "3.11.5"
dependencies = [
    "aiogram==3.18.0",
    "aiogram-dialog (>=2.3.1,<3.0.0)",
    "fluentogram (>=1.1.10,<2.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pyyaml (==6.0.2)",
    "sqlalchemy[asyncio] (==2.0.41)",
    "psycopg[binary] (==3.2.9)",
    "alembic (>=1.16.2,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
